Cleanup
git-svn-id: http://svn.code.sf.net/p/vjdbc/code@14 b62fc21d-d80f-0410-9b68-de9dbe04f5e5